# test-serialization

./: CMakeLists.txt
cmake/: Findasio.cmake  Findopenssl.cmake
src/: HttpRequest.hpp  HttpResponse.hpp  HttpServer.cpp  HttpServer.hpp  Listener.hpp  LogManager.hpp  MimeType.hpp  RequestHandler.hpp  Response.cpp  Response.hpp  Serializable.hpp  Session.hpp  httplib.h
test/unit/: CMakeLists.txt
test/unit/src/: SerializationTestSuite.cpp  http_server_test.cpp  http_server_test_2.cpp
